--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background: #333333;
+  background: #fff;
   justify-content: center;
   align-items: center;
   font-family: 'Helvetica Regular';
@@ -61,12 +61,12 @@ body {
 
 .card:hover .face.face1 {
   transform: translateY(0);
-  filter: drop-shadow(0 0 10px #000);
+  filter: drop-shadow(0 0 10px #fff);
   cursor: pointer;
 }
 
 .face.face1 .content {
-  opacity: .2;
+  opacity: .5;
   transition: 0.5s;
   text-align: center;
 }
@@ -77,13 +77,13 @@ body {
 
 .face.face1 .content i {
   font-size: 3em;
-  color: #cecece;
+  color: #000;
   display: inline-block;
 }
 
 .face.face1 .content h3 {
   font-size: 1em;
-  color: #cecece;
+  color: #000;
   text-align: center;
 }
 
@@ -93,7 +93,7 @@ body {
 
 .face.face2 {
   position: relative;
-  background: #cecece;
+  background: #333333;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -125,14 +125,14 @@ a {
 
 a:hover {
   background: #000000;
-  color: #cecece;
+  color: #333333;
   box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .text-true {
   font-family: 'Helvetica Bold';
   font-size: 24px;
-  color: #cecece;
+  color: #000;
   line-height: 1.2;
   text-align: center;
   width: 100%;
@@ -156,7 +156,7 @@ a:hover {
 }
 
 .flooter:hover {
-  font-family: 'Helvetica Medium';
-  color: #cecece;
-  filter: drop-shadow(0 0 10px #000);
+  font-family: 'Helvetica Bold';
+  color: #000;
+  filter: drop-shadow(0 0 10px #fff);
 }
